tests/paczka1/small_fuzzy/40512463.err
Error in line 1: viM S906 58,1
Error in line 2: viM S376 87,6
Error in line 7: S377 S906 82,9
